building#getModules typing